--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,6 +17,8 @@ phases:
 
   post_build:
     commands:
+      - echo Test started on `date`
+      - dotnet test dotnet-core-demo
       - echo Publish started on `date`
       - dotnet publish -c Release -r linux-x64 --self-contained false dotnet-core-demo
 
